[metadata]
name = srt-superset
version = 0.0.1
author = Adam Buckingham
author_email = adam.buckingham@gsa.gov
description = A SRT superset data analysis tools
license = CC0 1.0 Universal
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages = 
    srt_superset
install_requires = 
    Authlib==1.2.1
    flask-oidc==2.0.3
    gunicorn[gevent]==21.2.0
    gunicorn==21.2.0
    marshmallow-enum==1.5.1
    Pillow==10.0.1
    psycopg2==2.9.7
    requests==2.31.0
python_requires = >=3.10
package_dir=
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
