[metadata]
name = srt-superset
version = 0.0.1
author = Adam Buckingham
author_email = adam.buckingham@gsa.gov
description = A SRT superset data analysis tools
license = CC0 1.0 Universal
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    apache-superset[gevent, postgres, thumbnails]
    APScheduler==3.11.0
    Authlib==1.2.1
    flask-oidc==2.0.3
    marshmallow-enum==1.5.1
    requests==2.31.0
python_requires = >=3.10
package_dir=
    =src
zip_safe = no

[options.packages.find]
where = src
include = srt_superset

[options.extras_require]
testing =
    pytest
    pytest-cov
